--- a/src/chat.css
+++ b/src/chat.css
@@ -66,6 +66,11 @@
     outline: none;
     border: none;
 }
+.searchbtn:disabled{
+     outline: none;
+    border: none;
+    background-color: gray;
+}
 .selectbox{
     color: #00796b;
     border: 1px solid #00796b;
